# ros1_car2x_unit

./: README.md
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
devel/lib/car2x_unit/: car2x_unit
devel/lib/pkgconfig/: car2x_unit.pc
devel/share/car2x_unit/cmake/: car2x_unitConfig.cmake
install/: .rosinstall  local_setup.sh  setup.sh
src/: all_interface_modify.fbs
src/car2x_unit/: CMakeLists.txt  package.xml
src/car2x_unit/include/car2x_unit/: all_interface_generated.h  cam_interface.pb.h  cam_interface_generated.h  cpm_interface.pb.h  cpm_interface_generated.h  denm_interface.pb.h  denm_interface_generated.h  etsi_its_cdd.pb.h  etsi_its_cdd_generated.h  etsi_msg_interface.pb.h  etsi_msg_interface_generated.h  gossip_msg_generated.h  itspduheader_interface.pb.h  itspduheader_interface_generated.h
src/car2x_unit/launch/: car2x_unit.launch
src/car2x_unit/msg/: Acceleration3dWithConfidence.msg  AccelerationMagnitude.msg  AngularSpeedConfidence.msg  BasicVehicleContainerLowFrequency.msg  CAMessage.msg  CartesianAngle.msg  ChannelBusyRatio.msg  CircularShape.msg  CommandRequest.msg  CommandResponse.msg  CpmPayload.msg  DangerousGoodsExtended.msg  DriveDirection.msg  EllipticalShape.msg  EulerAnglesWithConfidence.msg  EventHistory.msg  FacilityLayerReception.msg  FacilityLayerTransmission.msg  GossipMessage.msg  HardShoulderStatus.msg  IntersectionReferenceID.msg  ItineraryPath.msg  ItsPduHeader.msg  LightBarSirenInUse.msg  LongitudinalAcceleration.msg  LongitudinalLanePosition.msg  LowerTriangularPositiveSemidefiniteMatrixColumns.msg  ManagmentContainer.msg  MapPosition.msg  ObjectClass.msg  ObjectDimension.msg  OriginatingRSUContainer.msg  PolygonalShape.msg  PositionOfOccupants.msg  PositioningSolutionType.msg  PtActivationType.msg  RectangularShape.msg  ReferencePosition.msg  RelevanceDistance.msg  RelevanceTrafficDirection.msg  (+17 more)
src/car2x_unit/scripts/: group4_demo.py
src/car2x_unit/src/: cam_interface.pb.cc  car2x_unit.cpp  cpm_interface.pb.cc  denm_interface.pb.cc  etsi_its_cdd.pb.cc  etsi_msg_interface.pb.cc  itspduheader_interface.pb.cc
src/cpm_interfaces/: CMakeLists.txt  package.xml
src/cpm_interfaces/msg/: AccelerationCartesian.msg  AccelerationPolarWithZ.msg  ActionID.msg  Altitude.msg  AngularSpeedConfidence.msg  BasicVehicleContainerHighFrequency.msg  CPMessage.msg  CartesianAngularVelocityComponent.msg  CartesianPosition3d.msg  CartesianPosition3dWithConfidence.msg  CauseCode.msg  CauseCodeType.msg  ClosedLanes.msg  CommandResponse.msg  CommandResponseData.msg  CorrelationColumn.msg  Curvature.msg  CurvatureCalculationMode.msg  DangerousGoodsBasic.msg  DeltaReferencePosition.msg  DriveDirection.msg  EnergyStorageType.msg  EventPoint.msg  FacilityLayerMessage.msg  LinkLayerPriority.msg  LinkLayerReception.msg  LinkLayerTransmission.msg  LowerTriangularPositiveSemidefiniteMatrix.msg  MapReference.msg  MatrixIncludedComponents.msg  MessageRateHz.msg  MessageRateRange.msg  MessageSegmentationInfo.msg  ObjectClassWithConfidence.msg  OriginatingStationsContainer.msg  OriginatingVehicleContainer.msg  OtherSubClass.msg  PerceivedObject.msg  PerceivedObjectContainer.msg  PerceptionRegion.msg  (+29 more)
src/pdk_position_input/: CMakeLists.txt  package.xml
src/pdk_position_input/config/: ublox.yaml
src/pdk_position_input/include/: pdk_VehicleDynamics.proto
src/pdk_position_input/launch/: input_pdk.launch
src/pdk_position_input/src/: MountingParameters.hpp  VehicleDynamics.hpp  pdk_interface.hpp  vehicle_info.cpp  vehicle_info.hpp
src/pdk_ros_msgs/: CMakeLists.txt  package.xml
src/pdk_ros_msgs/msg/: pdk_MsgHeader.msg  pdk_RadarObjectList.msg  pdk_SensorMsgHeader.msg  pdk_SensorType.msg  pdk_SignalSource.msg  pdk_SignalStatus.msg  pdk_time.msg  pdk_version.msg
src/pdk_ros_msgs/scripts/: pdk_tracking.py  pdk_tracking_filter.py
