<?xml version="1.0"?>
<package format="2">
  <name>pdk_ros_msgs</name>
  <version>0.1.0</version>
  <description>PDK ROS message Files</description>

  <maintainer email="SilasCorreia.Lobo@carissma.eu">Silas Lobo</maintainer>
  <license>BSD 3-clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
</package>